--- a/src/DailySoccerSolution/DailySoccerMobile/www/index.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/index.html
@@ -8,6 +8,12 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
+      <style>
+          .XXX{
+
+          }
+      </style>
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
