--- a/src/DailySoccerSolution/DailySoccerMobile/www/index.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/index.html
@@ -1,6 +1,6 @@
-﻿<!DOCTYPE html>
+﻿&#xFEFF;<!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
@@ -16,15 +16,20 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+<script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <!-- Cordova is bootstrapped by ionic-platform-web-client, uncomment this if you remove ionic-platform-web-client... -->
+<!-- <script src="cordova.js"></script> -->
+
+    <script src="lib/MobileServices.Web-2.0.0-beta.min.js"></script>
+    <script src="lib/angular-azure-mobile-service/dist/angular-azure-mobile-service.min.js"></script>
 
     <!-- your app's js -->
     <script src="scripts/appBundle.js"></script>
-  </head>
+</head>
 
-  <body ng-app="starter">
+<body ng-app="starter">
     <ion-nav-view></ion-nav-view>
-  </body>
+</body>
 </html>
