--- a/src/DailySoccerSolution/DailySoccerMobile/www/index.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/index.html
@@ -11,6 +11,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script>
+    <script src="lib/angular-responsive-images/js/angular-responsive-images.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <!-- Cordova is bootstrapped by ionic-platform-web-client, uncomment this if you remove ionic-platform-web-client... -->
