Add support windows phone
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/index.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/index.html
@@ -19,7 +19,7 @@
 
     <script src="lib/MobileServices.Web-2.0.0-beta.min.js"></script>
     <script src="lib/angular-azure-mobile-service/dist/angular-azure-mobile-service.min.js"></script>
-
+    <script src="lib/winstore-jscompat.js"></script>
     <!-- your app's js -->
     <script src="scripts/appBundle.js"></script>
 </head>
